--- a/reviews.html
+++ b/reviews.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <title>services</title>
   </head>
   <body
@@ -10,14 +11,24 @@
   >
     <header class="bg-bg-secondary fixed top-0 left-0 right-0 z-1">
       <div class="custom-container py-[15px] flex justify-between items-center">
-        <a href="/" class="flex items-end gap-2.5">
+        <a href="/" class="flex items-end gap-2.5 z-20">
           <svg class="h-10 w-10 fill-current">
             <use href="/sprite.svg#wave" />
           </svg>
           <span class="font-josefin text-4xl/[1]">draganov</span>
         </a>
-        <nav>
-          <ul class="flex gap-25px">
+        <button
+          data-burger-button
+          class="z-2 relative h-25px w-7.5 cursor-pointer md:hidden"
+        >
+          <span class="burger-line top-0"></span>
+          <span class="burger-line top-1/2 -translate-y-1/2"></span>
+          <span class="burger-line bottom-0"></span>
+        </button>
+        <nav data-nav-menu class="nav-menu closed">
+          <ul
+            class="flex flex-col gap-10 text-center text-2xl h-full justify-center md:flex-row md:gap-25px md:text-base md:h-auto"
+          >
             <li>
               <a href="about.html">Обо мне</a>
             </li>
@@ -38,9 +49,7 @@
       </div>
     </header>
     <main class="flex-1">
-      <div
-        class="py-12.5 bg-[url('../assets/images/studio.jpg')] bg-center bg-cover overlay"
-      >
+      <div class="py-12.5 bg-(image:--img-studio) bg-center bg-cover overlay">
         <h1 class="text-2xl text-accent font-semibold text-center relative">
           Отзывы
         </h1>
@@ -48,7 +57,7 @@
       <section>
         <div class="custom-container py-12.5">
           <fieldset
-            class="flex gap-25px mb-12.5"
+            class="flex flex-wrap justify-center gap-25px mb-12.5"
             name="category"
             data-tabs-container
           >
@@ -94,14 +103,17 @@
             />
             <label for="category-commercial"> Коммерческие проекты </label>
           </fieldset>
-          <div class="grid grid-cols-2 gap-25px" data-review-container></div>
+          <div
+            class="grid grid-cols-1 sm:grid-cols-2 gap-25px"
+            data-review-container
+          ></div>
         </div>
       </section>
       <section>
         <div class="custom-container py-25 flex flex-col gap-25px items-center">
           <h2 class="text-2xl text-accent font-semibold">Оставить отзыв</h2>
           <form
-            class="flex flex-col gap-5 w-full max-w-[410px]"
+            class="flex flex-col gap-5 w-[410px] max-w-full"
             data-form="review"
           >
             <div class="flex flex-col items-center gap-2.5">
@@ -175,7 +187,9 @@
       </section>
     </main>
     <footer class="bg-bg-secondary">
-      <div class="custom-container py-7.5 flex justify-between items-center">
+      <div
+        class="custom-container py-7.5 flex flex-wrap gap-25px justify-center items-center sm:justify-between"
+      >
         <div class="flex gap-25px items-center">
           <h2 class="text-2xl text-additional">Контакты</h2>
           <ul class="flex flex-col gap-2.5">
@@ -220,7 +234,7 @@
             </li>
           </ul>
         </div>
-        <a href="/" class="flex items-end gap-2.5">
+        <a href="/" class="flex items-end gap-2.5 hover:opacity-100">
           <svg class="h-10 w-10 fill-current">
             <use href="/sprite.svg#wave" />
           </svg>
