--- a/reviews.html
+++ b/reviews.html
@@ -194,7 +194,9 @@
           <h2 class="text-2xl text-additional">Контакты</h2>
           <ul class="flex flex-col gap-2.5">
             <li>
-              <a href="mailto:draganovd@gmail.com">draganovd@gmail.com</a>
+              <a href="mailto:draganovsound@gmail.com"
+                >draganovsound@gmail.com</a
+              >
             </li>
             <li>
               <a href="tel:+79234243223">+79234243223</a>
