--- a/reviews.html
+++ b/reviews.html
@@ -7,15 +7,15 @@
     <title>services</title>
   </head>
   <body
-    class="bg-bg-primary text-white font-montserrat pt-17.5 min-h-screen flex flex-col"
+    class="bg-bg-primary text-white font-montserrat pt-[65px] min-h-screen flex flex-col"
   >
     <header class="bg-bg-secondary fixed top-0 left-0 right-0 z-1">
       <div class="custom-container py-[15px] flex justify-between items-center">
         <a href="/" class="flex items-end gap-2.5 z-20">
-          <svg class="h-10 w-10 fill-current">
+          <svg class="h-[35px] w-[35px] fill-current">
             <use href="/sprite.svg#wave" />
           </svg>
-          <span class="font-josefin text-4xl/[1]">draganov</span>
+          <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
         <button
           data-burger-button
@@ -27,7 +27,7 @@
         </button>
         <nav data-nav-menu class="nav-menu closed">
           <ul
-            class="flex flex-col gap-10 text-center text-2xl h-full justify-center md:flex-row md:gap-25px md:text-base md:h-auto"
+            class="flex flex-col gap-10 text-center text-2xl h-full justify-center md:flex-row md:gap-5 md:text-base md:h-auto"
           >
             <li>
               <a href="about.html">Обо мне</a>
@@ -237,10 +237,10 @@
           </ul>
         </div>
         <a href="/" class="flex items-end gap-2.5 hover:opacity-100">
-          <svg class="h-10 w-10 fill-current">
+          <svg class="h-[35px] w-[35px] fill-current">
             <use href="/sprite.svg#wave" />
           </svg>
-          <span class="font-josefin text-4xl/[1]">draganov</span>
+          <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
       </div>
     </footer>
