--- a/about.html
+++ b/about.html
@@ -50,7 +50,9 @@
       </div>
     </header>
     <main class="flex-1">
-      <div class="py-12.5 bg-(image:--img-studio) bg-center bg-cover overlay">
+      <div
+        class="py-12.5 bg-(image:--img-studio-about) bg-position-[center_40%] bg-cover overlay"
+      >
         <h1 class="text-2xl text-accent font-semibold text-center relative">
           Обо мне
         </h1>
