--- a/reviews.html
+++ b/reviews.html
@@ -49,7 +49,9 @@
       </div>
     </header>
     <main class="flex-1">
-      <div class="py-12.5 bg-(image:--img-studio) bg-center bg-cover overlay">
+      <div
+        class="py-12.5 bg-(image:--img-studio-reviews) bg-center bg-cover overlay"
+      >
         <h1 class="text-2xl text-accent font-semibold text-center relative">
           Отзывы
         </h1>
