--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/soundengineer-website/vite.svg" />
 
     <title>services</title>
-    <script type="module" crossorigin src="/assets/main-HZaRNA7h.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-BWks55RE.css">
+    <script type="module" crossorigin src="/soundengineer-website/assets/main-Bdptv7xB.js"></script>
+    <link rel="stylesheet" crossorigin href="/soundengineer-website/assets/main-D9PK2afS.css">
   </head>
   <body
     class="bg-bg-primary text-white font-montserrat pt-[65px] min-h-screen flex flex-col"
@@ -16,7 +16,7 @@
       <div class="custom-container py-[15px] flex justify-between items-center">
         <a href="/" class="flex items-end gap-2.5 z-20">
           <svg class="h-[35px] w-[35px] fill-current">
-            <use href="/sprite.svg#wave" />
+            <use href="/soundengineer-website/sprite.svg#wave" />
           </svg>
           <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
@@ -97,14 +97,14 @@
             </div>
             <img
               class="flex-1 object-cover w-112.5 object-center"
-              src="/photo1.jpg"
+              src="/soundengineer-website/photo1.jpg"
               alt="Я в студии приложил наушник к уху"
             />
           </div>
           <div class="flex flex-wrap-reverse gap-25px">
             <img
               class="flex-1 object-cover w-112.5 object-center"
-              src="/photo2.jpg"
+              src="/soundengineer-website/photo2.jpg"
               alt="Я в студии, повернут к камере"
             />
             <div class="flex-1 basis-6/12 flex flex-col gap-[15px]">
@@ -207,14 +207,14 @@
                 <li>
                   <a href="https://web.telegram.org">
                     <svg class="fill-additional w-25px aspect-square">
-                      <use href="/sprite.svg#telegram" />
+                      <use href="/soundengineer-website/sprite.svg#telegram" />
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="https://www.tiktok.com/explore">
                     <svg class="fill-additional w-25px aspect-square">
-                      <use href="/sprite.svg#tiktok" />
+                      <use href="/soundengineer-website/sprite.svg#tiktok" />
                     </svg>
                   </a>
                 </li>
@@ -239,7 +239,7 @@
         </div>
         <a href="/" class="flex items-end gap-2.5 hover:opacity-100">
           <svg class="h-[35px] w-[35px] fill-current">
-            <use href="/sprite.svg#wave" />
+            <use href="/soundengineer-website/sprite.svg#wave" />
           </svg>
           <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
