--- a/services.html
+++ b/services.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/soundengineer-website/vite.svg" />
     <title>services</title>
-    <script type="module" crossorigin src="/assets/services-eeXDlPSr.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/main-HZaRNA7h.js">
-    <link rel="modulepreload" crossorigin href="/assets/renderUtils-Cht81UpF.js">
-    <link rel="stylesheet" crossorigin href="/assets/main-BWks55RE.css">
+    <script type="module" crossorigin src="/soundengineer-website/assets/services-Byss5H64.js"></script>
+    <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/main-Bdptv7xB.js">
+    <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/renderUtils-C7-U4mPV.js">
+    <link rel="stylesheet" crossorigin href="/soundengineer-website/assets/main-D9PK2afS.css">
   </head>
   <body
     class="bg-bg-primary text-white font-montserrat pt-[65px] min-h-screen flex flex-col"
@@ -17,7 +17,7 @@
       <div class="custom-container py-[15px] flex justify-between items-center">
         <a href="/" class="flex items-end gap-2.5 z-20">
           <svg class="h-[35px] w-[35px] fill-current">
-            <use href="/sprite.svg#wave" />
+            <use href="/soundengineer-website/sprite.svg#wave" />
           </svg>
           <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
@@ -128,14 +128,14 @@
                 <li>
                   <a href="https://web.telegram.org">
                     <svg class="fill-additional w-25px aspect-square">
-                      <use href="/sprite.svg#telegram" />
+                      <use href="/soundengineer-website/sprite.svg#telegram" />
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="https://www.tiktok.com/explore">
                     <svg class="fill-additional w-25px aspect-square">
-                      <use href="/sprite.svg#tiktok" />
+                      <use href="/soundengineer-website/sprite.svg#tiktok" />
                     </svg>
                   </a>
                 </li>
@@ -160,7 +160,7 @@
         </div>
         <a href="/" class="flex items-end gap-2.5 hover:opacity-100">
           <svg class="h-[35px] w-[35px] fill-current">
-            <use href="/sprite.svg#wave" />
+            <use href="/soundengineer-website/sprite.svg#wave" />
           </svg>
           <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
