--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/soundengineer-website/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>soundengineer-website</title>
-    <script type="module" crossorigin src="/soundengineer-website/assets/main-nCcXBL8w.js"></script>
+    <script type="module" crossorigin src="/soundengineer-website/assets/main-8FipJDTj.js"></script>
     <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/main-Bdptv7xB.js">
-    <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/renderUtils-C7-U4mPV.js">
+    <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/renderUtils-CK7oqR45.js">
     <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/modalUtils-DrQWLGV4.js">
     <link rel="stylesheet" crossorigin href="/soundengineer-website/assets/main-D9PK2afS.css">
   </head>
@@ -18,7 +18,7 @@
       <div class="custom-container py-[15px] flex justify-between items-center">
         <a href="/" class="flex items-end gap-2.5 z-20">
           <svg class="h-[35px] w-[35px] fill-current">
-            <use href="/soundengineer-website/sprite.svg#wave" />
+            <use href="./sprite.svg#wave" />
           </svg>
           <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
@@ -76,7 +76,7 @@
             <a href="#portfolio" class="btn flex items-center gap-2.5 w-fit">
               Послушать
               <svg class="arrow">
-                <use href="/soundengineer-website/sprite.svg#arrow" />
+                <use href="./sprite.svg#arrow" />
               </svg>
             </a>
           </div>
@@ -85,7 +85,7 @@
             class="absolute bottom-10 right-1/2 translate-x-1/2 opacity-70 animate-bounce hover:opacity-100 cursor-pointer"
           >
             <svg class="fill-additional h-12.5 w-12.5">
-              <use href="/soundengineer-website/sprite.svg#scroll" />
+              <use href="./sprite.svg#scroll" />
             </svg>
           </a>
         </div>
@@ -96,7 +96,7 @@
             <h2 class="text-2xl">Обо мне</h2>
             <div>
               <svg class="h-full aspect-square fill-current">
-                <use href="/soundengineer-website/sprite.svg#person" />
+                <use href="./sprite.svg#person" />
               </svg>
             </div>
           </div>
@@ -118,7 +118,7 @@
           <a href="/about.html" class="link">
             Подробнее
             <svg class="arrow -rotate-90">
-              <use href="/soundengineer-website/sprite.svg#arrow" />
+              <use href="./sprite.svg#arrow" />
             </svg>
           </a>
         </div>
@@ -130,7 +130,7 @@
             <a class="link" href="/services.html">
               Все услуги
               <svg class="arrow -rotate-90">
-                <use href="/soundengineer-website/sprite.svg#arrow" />
+                <use href="./sprite.svg#arrow" />
               </svg>
             </a>
           </div>
@@ -155,7 +155,7 @@
             <a class="link" href="/portfolio.html">
               Все работы
               <svg class="arrow -rotate-90">
-                <use href="/soundengineer-website/sprite.svg#arrow" />
+                <use href="./sprite.svg#arrow" />
               </svg>
             </a>
           </div>
@@ -181,7 +181,7 @@
               <a class="link" href="/reviews.html">
                 Все отзывы
                 <svg class="arrow -rotate-90">
-                  <use href="/soundengineer-website/sprite.svg#arrow" />
+                  <use href="./sprite.svg#arrow" />
                 </svg>
               </a>
             </div>
@@ -249,14 +249,14 @@
                 <li>
                   <a href="https://web.telegram.org">
                     <svg class="fill-additional w-25px aspect-square">
-                      <use href="/soundengineer-website/sprite.svg#telegram" />
+                      <use href="./sprite.svg#telegram" />
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="https://www.tiktok.com/explore">
                     <svg class="fill-additional w-25px aspect-square">
-                      <use href="/soundengineer-website/sprite.svg#tiktok" />
+                      <use href="./sprite.svg#tiktok" />
                     </svg>
                   </a>
                 </li>
@@ -281,7 +281,7 @@
         </div>
         <a href="/" class="flex items-end gap-2.5 hover:opacity-100">
           <svg class="h-[35px] w-[35px] fill-current">
-            <use href="/soundengineer-website/sprite.svg#wave" />
+            <use href="./sprite.svg#wave" />
           </svg>
           <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
