--- a/portfolio.html
+++ b/portfolio.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/soundengineer-website/vite.svg" />
     <title>services</title>
-    <script type="module" crossorigin src="/soundengineer-website/assets/portfolio-CqNnHoSm.js"></script>
+    <script type="module" crossorigin src="/soundengineer-website/assets/portfolio-DZAtYTT6.js"></script>
     <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/main-Bdptv7xB.js">
-    <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/renderUtils-C7-U4mPV.js">
+    <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/renderUtils-CK7oqR45.js">
     <link rel="stylesheet" crossorigin href="/soundengineer-website/assets/main-D9PK2afS.css">
   </head>
   <body
@@ -17,7 +17,7 @@
       <div class="custom-container py-[15px] flex justify-between items-center">
         <a href="/" class="flex items-end gap-2.5 z-20">
           <svg class="h-[35px] w-[35px] fill-current">
-            <use href="/soundengineer-website/sprite.svg#wave" />
+            <use href="./sprite.svg#wave" />
           </svg>
           <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
@@ -66,7 +66,7 @@
             <div class="flex gap-2.5 font-semibold items-center mb-25px">
               <h2 class="text-2xl">Музыка</h2>
               <svg class="h-25px w-25px fill-current">
-                <use href="/soundengineer-website/sprite.svg#melody" />
+                <use href="./sprite.svg#melody" />
               </svg>
             </div>
             <div
@@ -80,7 +80,7 @@
             <div class="flex gap-2.5 font-semibold items-center mb-25px">
               <h2 class="text-2xl">Постпродакшн и саунд-дизайн</h2>
               <svg class="h-25px w-25px fill-current">
-                <use href="/soundengineer-website/sprite.svg#fader" />
+                <use href="./sprite.svg#fader" />
               </svg>
             </div>
             <div
@@ -94,7 +94,7 @@
             <div class="flex gap-2.5 font-semibold items-center mb-25px">
               <h2 class="text-2xl">Подкасты и речь</h2>
               <svg class="h-25px w-25px fill-current">
-                <use href="/soundengineer-website/sprite.svg#mic" />
+                <use href="./sprite.svg#mic" />
               </svg>
             </div>
             <div
@@ -108,7 +108,7 @@
             <div class="flex gap-2.5 font-semibold items-center mb-25px">
               <h2 class="text-2xl">Коммерческие аудиопроекты</h2>
               <svg class="h-25px w-25px fill-current">
-                <use href="/soundengineer-website/sprite.svg#megaphone" />
+                <use href="./sprite.svg#megaphone" />
               </svg>
             </div>
             <div
@@ -139,14 +139,14 @@
                 <li>
                   <a href="https://web.telegram.org">
                     <svg class="fill-additional w-25px aspect-square">
-                      <use href="/soundengineer-website/sprite.svg#telegram" />
+                      <use href="./sprite.svg#telegram" />
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="https://www.tiktok.com/explore">
                     <svg class="fill-additional w-25px aspect-square">
-                      <use href="/soundengineer-website/sprite.svg#tiktok" />
+                      <use href="./sprite.svg#tiktok" />
                     </svg>
                   </a>
                 </li>
@@ -171,7 +171,7 @@
         </div>
         <a href="/" class="flex items-end gap-2.5 hover:opacity-100">
           <svg class="h-[35px] w-[35px] fill-current">
-            <use href="/soundengineer-website/sprite.svg#wave" />
+            <use href="./sprite.svg#wave" />
           </svg>
           <span class="font-josefin text-[32px]/[1]">draganov</span>
         </a>
