--- a/contacts.html
+++ b/contacts.html
@@ -15,7 +15,7 @@
   >
     <header class="bg-bg-secondary fixed top-0 left-0 right-0 z-1">
       <div class="custom-container py-[15px] flex justify-between items-center">
-        <a href="/" class="flex items-end gap-2.5 z-20">
+        <a href="./" class="flex items-end gap-2.5 z-20">
           <svg class="h-[35px] w-[35px] fill-current">
             <use href="./sprite.svg#wave" />
           </svg>
@@ -142,7 +142,7 @@
             </li>
           </ul>
         </div>
-        <a href="/" class="flex items-end gap-2.5 hover:opacity-100">
+        <a href="./" class="flex items-end gap-2.5 hover:opacity-100">
           <svg class="h-[35px] w-[35px] fill-current">
             <use href="./sprite.svg#wave" />
           </svg>
