--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/soundengineer-website/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>soundengineer-website</title>
-    <script type="module" crossorigin src="/soundengineer-website/assets/main-8FipJDTj.js"></script>
-    <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/main-Bdptv7xB.js">
+    <script type="module" crossorigin src="/soundengineer-website/assets/main-BtSSQQ3e.js"></script>
+    <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/main-CM1BV9iz.js">
     <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/renderUtils-CK7oqR45.js">
     <link rel="modulepreload" crossorigin href="/soundengineer-website/assets/modalUtils-DrQWLGV4.js">
-    <link rel="stylesheet" crossorigin href="/soundengineer-website/assets/main-D9PK2afS.css">
+    <link rel="stylesheet" crossorigin href="/soundengineer-website/assets/main-CiGZlB_4.css">
   </head>
   <body
     class="bg-bg-primary text-white font-montserrat min-h-screen flex flex-col"
@@ -231,7 +231,7 @@
     </main>
     <footer class="bg-bg-secondary">
       <div
-        class="custom-container py-7.5 flex flex-wrap gap-25px justify-center items-center sm:justify-between"
+        class="custom-container py-7.5 flex flex-wrap gap-12.5 justify-center items-center md:justify-between"
       >
         <div class="flex gap-25px items-center flex-wrap justify-center">
           <h2 class="text-2xl text-additional">Контакты</h2>
